--- a/Tech-Conomy Project.ipynb
+++ b/Tech-Conomy Project.ipynb
@@ -2,12 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Student Enrollment Number: 25199\n",
-    "# Take Home Exam - 7313"
+    "# Tech-Conomy Project - 7313"
    ]
   },
   {
@@ -63,10 +62,13 @@
     "# # Setup Continued - Connecting my python scritp to the databases\n",
     "\n",
     "# # Details of the database connection\n",
-    "# host = \"mysql-1.cda.hhs.se\"\n",
-    "# username = \"homeexam\"  \n",
-    "# password = \"data\"  \n",
-    "# schema = \"HomeExam2024\"\n",
+    "\n",
+    "# I have removed the details for the connection \n",
+    "\n",
+    "# host = \" \"\n",
+    "# username = \" \"  \n",
+    "# password = \" \"  \n",
+    "# schema = \" \"\n",
     "\n",
     "# # Creating a connection string using the fomrat replacing {} in the string with the respective inputs to the function\n",
     "# connection_string =\"mysql+pymysql://{}:{}@{}/{}\".format(username, password, host, schema)\n",
@@ -926,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +945,7 @@
     "# Specifying which users were sold to rat_race\n",
     "df_json['spin_win'] = df_json['persona'].apply(lambda x: 1 if x in ['Sinner', 'Fumer', 'Tippler'] else 0)\n",
     "\n",
-    "# Calculating the totalt profit of selling to Sinner, Fumer and Tippler following the instruction in the exam\n",
+    "# Calculating the totalt profit of selling to Sinner, Fumer and Tippler following the instruction\n",
     "exponent = 1.2 \n",
     "expected_total_profit = (pow(prices_dict['spin_win_prices']['sinner'] * 0.5 * persona_counts_dict.get('Sinner'), exponent) + \n",
     "                         pow(prices_dict['spin_win_prices']['fumer'] * 0.5 * persona_counts_dict.get('Fumer'), exponent) + \n",
@@ -954,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +1001,7 @@
     "list_of_dictionaries = df_json.to_dict(orient='records')\n",
     "\n",
     "# Writing the list of dictionaries to a JSON file with my assigned file name:\n",
-    "with open('25199_take_home_exam.json', 'w') as file:\n",
+    "with open('Tech-Conomy-Project.json', 'w') as file:\n",
     "    json.dump(list_of_dictionaries, file, indent=2)"
    ]
   },
